# akna_pp

./: CMakeLists.txt  Control.cpp  Control.h  Field.cpp  Field.h  Game.cpp  Game.h  Mine.cpp  Mine.h  Tile.cpp  Tile.h  VektorTable.cpp  VektorTable.h  econio.cpp  econio.h  main.cpp  memtrace.h  mentes.txt
